# snippets-cpp

./: .gitignore  CMakeLists.txt  atomic_check.cc  curl_easy_setopt_demo.cc  delete_vs_memcpy.cc  demo_absl_optional.cc  demo_libcurl.cc  eval_expression_by_stack.cc  forward_declaration.cc  forward_declaration.h  http_proxy.cc  https_client.cc  https_server.cc  link_list.cc  link_list_with_unique_ptr.cpp  main.cc  map_insert.cc  shadowsocksr.cc  static_constexpr.cc  static_constexpr.h  steady_clock.cc  string_class_size.cc
epoll_demo/: .ninja_log  README.md  build.ninja  fair_recv.cc  nonblocking_connect.cc  server_et.cc  starvation.cc  tcp_client.cc  thundering_herd.cc  wakeup_only_one_thread.cc
tcp_udp/: .ninja_log  README.md  build.ninja  raw_socket.cc  rtt_test.cc  send.cc  server.cc  syn_flood.cc  syn_sent.cc  udp_client.cc  udp_server.cc
